nohup.out
  File "password-evolution.py", line 12
    return 'Welcome to the hands-on lab for an evolution of password systems!
                                                                            ^
SyntaxError: EOL while scanning string literal
  File "password-evolution.py", line 12
    return 'Welcome to the hands-on lab for an evolution of password systems!
                                                                            ^
SyntaxError: EOL while scanning string literal
  File "password-evolution.py", line 12
    return 'Bienvenido a la pagina web del Item I de la evaluacion III!
                                                                      ^
SyntaxError: EOL while scanning string literal
  File "password-evolution.py", line 12
    return 'Bienvenido a la pagina web del Item I de la evaluacion III!
                                                                      ^
SyntaxError: EOL while scanning string literal
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:9500/ (Press CTRL+C to quit)
127.0.0.1 - - [21/Jun/2023 04:39:36] "[37mGET / HTTP/1.1[0m" 200 -
127.0.0.1 - - [21/Jun/2023 04:39:36] "[33mGET /favicon.ico HTTP/1.1[0m" 404 -
127.0.0.1 - - [21/Jun/2023 04:41:26] "[37mGET / HTTP/1.1[0m" 200 -
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:5000/ (Press CTRL+C to quit)
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:9500/ (Press CTRL+C to quit)
127.0.0.1 - - [21/Jun/2023 04:55:38] "[37mGET / HTTP/1.1[0m" 200 -
127.0.0.1 - - [21/Jun/2023 04:57:19] "[37mPOST /signup/v1 HTTP/1.1[0m" 200 -
127.0.0.1 - - [21/Jun/2023 05:00:09] "[37mPOST /login/v1 HTTP/1.1[0m" 200 -
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:9500/ (Press CTRL+C to quit)
127.0.0.1 - - [21/Jun/2023 05:18:46] "[37mPOST /signup/v2 HTTP/1.1[0m" 200 -
127.0.0.1 - - [21/Jun/2023 05:19:01] "[37mPOST /signup/v2 HTTP/1.1[0m" 200 -
127.0.0.1 - - [21/Jun/2023 05:20:37] "[37mPOST /login/v2 HTTP/1.1[0m" 200 -
127.0.0.1 - - [21/Jun/2023 05:20:54] "[37mPOST /login/v2 HTTP/1.1[0m" 200 -
